# uta-and-ahp

./: dap.lua  pyproject.toml
.github/workflows/: workflow.yml
data/: criteria.csv  dataset.csv  pairwise.csv
report/: main.tex
uta_ahp/: __main__.py  cli.py  utils.py
uta_ahp/model/: __init__.py  ahp.py  base.py  uta.py
